# plug-and-trust

./: ChangeLog.md  SBOM.spdx.json  simwlib_cmake_options.cmake
feature_file/scp03_ftr/: fsl_sss_ftr.h
hello_example/: CMakeLists.txt  ex_hello_se052f.c
hostlib/hostLib/inc/: PlugAndTrust_HostLib_Ver.h  PlugAndTrust_Pkg_Ver.h
hostlib/hostLib/libCommon/infra/: sm_apdu.c  sm_connect.c  sm_types.h
hostlib/hostLib/libCommon/log/: nxLog.c
hostlib/hostLib/libCommon/smCom/: accessManager.h  smCom.c  smComSerial_PCLinux.c  smComSocket_fd.c
hostlib/hostLib/libCommon/smCom/T1oI2C/: phNxpEsePal_i2c.c  phNxpEse_Api.c
hostlib/hostLib/platform/generic/: sm_timer.c
hostlib/hostLib/platform/inc/: i2c_a7.h
hostlib/hostLib/platform/linux/: i2c_a7.c
hostlib/hostLib/platform/rsp/: se05x_reset.c
hostlib/hostLib/se05x_03_xx_xx/: se05x_T4T_APDU_impl.h  se05x_pake_APDU_impl.h
sss/ex/inc/: ex_sss_main_inc.h
sss/ex/src/: ex_sss_boot.c  ex_sss_se05x_auth.c
sss/inc/: fsl_sss_api_ver.h  fsl_sss_ftr.h.in
sss/port/default/: fsl_sss_types.h
sss/src/: fsl_sss_util_rsa_sign_utils.c
sss/src/keystore/: keystore_cmn.c
sss/src/mbedtls/: fsl_sss_mbedtls_apis.c
sss/src/openssl/: fsl_sss_openssl_apis.c
sss/src/se05x/: fsl_sss_se05x_eckey.c  fsl_sss_se05x_policy.c
