CMAKE_MINIMUM_REQUIRED(VERSION 3.5.0)

project(ex_hello_se052f)

IF(NOT DEFINED PTMW_Applet)
    SET(PTMW_Applet "SE05X_C" CACHE STRING "The Secure Element Applet")
ENDIF()

IF(NOT DEFINED PTMW_SE05X_Ver)
    SET(PTMW_SE05X_Ver "07_02" CACHE STRING "SE05X Applet version")
ENDIF()

IF(NOT DEFINED PTMW_HostCrypto)
    SET(PTMW_HostCrypto "OPENSSL" CACHE STRING "Counterpart Crypto on Host")
ENDIF()

IF(NOT DEFINED PTMW_SE05X_Auth)
    SET(PTMW_SE05X_Auth "PlatfSCP03" CACHE STRING "SE050 Authentication")
ENDIF()

IF(NOT DEFINED PTMW_PFSCP)
    SET(PTMW_PFSCP "SE052_B501" CACHE STRING "Platform SCP default key set")
ENDIF()

SET(SIMW_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
INCLUDE(${SIMW_LIB_DIR}/simw_lib.cmake)

SET(EX_HELLO_SE052F_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/ex_hello_se052f.c)
IF(NOT EXISTS ${EX_HELLO_SE052F_SOURCE})
    MESSAGE(FATAL_ERROR "Missing ${EX_HELLO_SE052F_SOURCE}. Copy ex_hello_se052f.c next to this CMakeLists.txt.")
ENDIF()

IF("${PTMW_SE05X_Auth}" STREQUAL "None")
ADD_EXECUTABLE(${PROJECT_NAME} ${SIMW_SE_SOURCES} ${EX_HELLO_SE052F_SOURCE})
ELSE()
ADD_EXECUTABLE(${PROJECT_NAME} ${SIMW_SE_SOURCES} ${SIMW_SE_AUTH_SOURCES} ${EX_HELLO_SE052F_SOURCE})
ENDIF()

IF("${PTMW_HostCrypto}" STREQUAL "OPENSSL")
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ssl crypto)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(
    ${PROJECT_NAME}
    PUBLIC
    ../
    ${SIMW_INC_DIR}
    )
